[package]
name = "byewlma"
version = "0.0.1"
authors = ["Elliott Clarke <ecclarke42@gmail.com>"]
edition = "2018"
license = "MIT/Apache-2.0"
repository = "https://github.com/ecclarke42/byewlma"
description = "Opinionated implementation of Bulma for Yew"

exclude = [
    ".tools",
    "examples/*"
]

[workspace]
members = [
    ".tools",
    "examples/*",

    "byewlma-macros",
]

[dependencies]
byewlma-macros = "0.1"

chrono = { version = "0.4", features = ["serde", "wasmbind"] }
futures = "0.3"
palette = "0.6"
paste = "1"
strum = { version = "0.21", features = ["derive"] }
thiserror = "1"
yew = "0.18"
yewtil = { version = "0.4", features = ["pure"] }
