[package]
name = "byewlma"
version = "0.1.3"
authors = ["Elliott Clarke <ecclarke42@gmail.com>"]
edition = "2018"
license = "MIT/Apache-2.0"
repository = "https://github.com/ecclarke42/byewlma"
description = "Opinionated implementation of Bulma for Yew"

exclude = [
    ".tools",
    "examples/*"
]

[workspace]
members = [
    ".tools",
    "examples/*",

    "byewlma-macros",
]

[dependencies]
byewlma-macros = {path = "./byewlma-macros" } # "0.1"

chrono = { version = "0.4", features = ["serde", "wasmbind"] }
derive_more = "0.99"
futures = "0.3"
gloo = "0.4"
palette = "0.6"
paste = "1"
strum = { version = "0.22", features = ["derive"] }
thiserror = "1"

wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["Event", "FileList", "HtmlInputElement"] }

yew = { git = "https://github.com/yewstack/yew" }
yew-agent = { git = "https://github.com/yewstack/yew" }
