[package]
name = "showcase"
version = "0.1.0"
authors = ["Elliott Clarke <ecclarke42@gmail.com>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byewlma = { path = "../../" }
yew = { git = "https://github.com/yewstack/yew/" }
yew-router = { git = "https://github.com/yewstack/yew/" }