[package]
name = "showcase"
version = "0.1.0"
authors = ["Elliott Clarke <ecclarke42@gmail.com>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byewlma = { path = "../../" }
lazy_static = "*"
yew = { git = "https://github.com/yewstack/yew/" }
yewtil = { git = "https://github.com/yewstack/yew/" }
yew-router = { git = "https://github.com/yewstack/yew/" }
syntect = { version = "*", default-features = false, features = ["default-fancy"] }