[package]
name = "showcase"
version = "0.1.0"
authors = ["Elliott Clarke <ecclarke42@gmail.com>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byewlma = { path = "../.." }
lazy_static = "*"
wasm-bindgen = "*"
yew = "0.18"
yewtil = "0.4"
yew-router = "0.15"
syntect = { version = "*", default-features = false, features = ["default-fancy"] }
